--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -51,6 +51,9 @@
             ],
             "styles": [
               "src/styles.css"
+            ],
+            "polyfills": [
+              "zone.js"
             ]
           },
           "configurations": {
